packages/imagproc/lib/ImagProc/Ipp/ptr_adapt.h

int ippiFloodFill_Grad8Con_8u_C1IRx(unsigned char*, int, void*, void*, unsigned char, unsigned char, unsigned char, void*, unsigned char*);
int ippiUndistortGetSizex(void*, int*);
int ippiCreateMapCameraUndistort_32f_C1Rx(float*, int, float*, int, void*, float, float, float, float, float, float, float, float, unsigned char*);
int ippiUndistortRadial_8u_C1Rx(unsigned char*, int, unsigned char*, int, void*, float, float, float, float, float, float, unsigned char*);
int ippiUndistortRadial_32f_C1Rx(float*, int, float*, int, void*, float, float, float, float, float, float, unsigned char*);
int ippiUndistortRadial_8u_C3Rx(unsigned char*, int, unsigned char*, int, void*, float, float, float, float, float, float, unsigned char*);
int ippiSegmentWatershedGetBufferSize_8u_C1Rx(void*, int*);
int ippiSegmentWatershed_8u_C1IRx(unsigned char*, int, unsigned char*, int, void*, int, int, unsigned char*);