packages/imagproc/lib/ImagProc/Ipp/Adapt.hs


foreign import ccall "adapt.h ippiFloodFill_Grad8Con_8u_C1IRx"
    ippiFloodFill_Grad8Con_8u_C1IRx :: Ptr CUChar -> Int -> Ptr IppiSize -> Ptr IppiPoint -> CUChar -> CUChar -> CUChar -> Ptr IppiConnectedComp -> Ptr CUChar -> IO Int
ippiFloodFill_Grad8Con_8u_C1IR pImage imageStep roiSize seed newVal minDelta maxDelta pRegion pBuffer = do
    proiSize <- new roiSize
    pseed <- new seed
    r <- ippiFloodFill_Grad8Con_8u_C1IRx pImage imageStep proiSize pseed newVal minDelta maxDelta pRegion pBuffer
    free proiSize
    free pseed
    return r

foreign import ccall "adapt.h ippiUndistortGetSizex"
    ippiUndistortGetSizex :: Ptr IppiSize -> Ptr CInt -> IO Int
ippiUndistortGetSize roiSize pBufsize = do
    proiSize <- new roiSize
    r <- ippiUndistortGetSizex proiSize pBufsize
    free proiSize
    return r

foreign import ccall "adapt.h ippiCreateMapCameraUndistort_32f_C1Rx"
    ippiCreateMapCameraUndistort_32f_C1Rx :: Ptr Float -> Int -> Ptr Float -> Int -> Ptr IppiSize -> Float -> Float -> Float -> Float -> Float -> Float -> Float -> Float -> Ptr CUChar -> IO Int
ippiCreateMapCameraUndistort_32f_C1R pxMap xStep pyMap yStep roiSize fx fy cx cy k1 k2 p1 p2 pBuffer = do
    proiSize <- new roiSize
    r <- ippiCreateMapCameraUndistort_32f_C1Rx pxMap xStep pyMap yStep proiSize fx fy cx cy k1 k2 p1 p2 pBuffer
    free proiSize
    return r

foreign import ccall "adapt.h ippiUndistortRadial_8u_C1Rx"
    ippiUndistortRadial_8u_C1Rx :: Ptr CUChar -> Int -> Ptr CUChar -> Int -> Ptr IppiSize -> Float -> Float -> Float -> Float -> Float -> Float -> Ptr CUChar -> IO Int
ippiUndistortRadial_8u_C1R pSrc srcStep pDst dstStep roiSize fx fy cx cy k1 k2 pBuffer = do
    proiSize <- new roiSize
    r <- ippiUndistortRadial_8u_C1Rx pSrc srcStep pDst dstStep proiSize fx fy cx cy k1 k2 pBuffer
    free proiSize
    return r

foreign import ccall "adapt.h ippiUndistortRadial_32f_C1Rx"
    ippiUndistortRadial_32f_C1Rx :: Ptr Float -> Int -> Ptr Float -> Int -> Ptr IppiSize -> Float -> Float -> Float -> Float -> Float -> Float -> Ptr CUChar -> IO Int
ippiUndistortRadial_32f_C1R pSrc srcStep pDst dstStep roiSize fx fy cx cy k1 k2 pBuffer = do
    proiSize <- new roiSize
    r <- ippiUndistortRadial_32f_C1Rx pSrc srcStep pDst dstStep proiSize fx fy cx cy k1 k2 pBuffer
    free proiSize
    return r

foreign import ccall "adapt.h ippiUndistortRadial_8u_C3Rx"
    ippiUndistortRadial_8u_C3Rx :: Ptr CUChar -> Int -> Ptr CUChar -> Int -> Ptr IppiSize -> Float -> Float -> Float -> Float -> Float -> Float -> Ptr CUChar -> IO Int
ippiUndistortRadial_8u_C3R pSrc srcStep pDst dstStep roiSize fx fy cx cy k1 k2 pBuffer = do
    proiSize <- new roiSize
    r <- ippiUndistortRadial_8u_C3Rx pSrc srcStep pDst dstStep proiSize fx fy cx cy k1 k2 pBuffer
    free proiSize
    return r

foreign import ccall "adapt.h ippiSegmentWatershedGetBufferSize_8u_C1Rx"
    ippiSegmentWatershedGetBufferSize_8u_C1Rx :: Ptr IppiSize -> Ptr CInt -> IO Int
ippiSegmentWatershedGetBufferSize_8u_C1R roiSize pBufSize = do
    proiSize <- new roiSize
    r <- ippiSegmentWatershedGetBufferSize_8u_C1Rx proiSize pBufSize
    free proiSize
    return r

foreign import ccall "adapt.h ippiSegmentWatershed_8u_C1IRx"
    ippiSegmentWatershed_8u_C1IRx :: Ptr CUChar -> Int -> Ptr CUChar -> Int -> Ptr IppiSize -> CInt -> Int -> Ptr CUChar -> IO Int
ippiSegmentWatershed_8u_C1IR pSrc srcStep pMarker markerStep roiSize norm flag pBuffer = do
    proiSize <- new roiSize
    r <- ippiSegmentWatershed_8u_C1IRx pSrc srcStep pMarker markerStep proiSize norm flag pBuffer
    free proiSize
    return r

